<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewRankings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DA4CAF50"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/myPrios"
        android:textColor="#BC000000"
        android:textSize="45dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/new_name"
            android:inputType="text"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonNEWNAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textSize="14dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/rankingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:paddingTop="6dp"
        android:scrollbarSize="4dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonRENAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/rename_button_anim"
                    android:text="@string/rename"
                    android:textAllCaps="false"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCOPYPRIO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rename_button_anim"
                    android:text="@string/copy_prio"
                    android:textAllCaps="false"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDELETE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/muelleimer"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonADD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|top"
            android:layout_margin="8dp"
            android:background="@drawable/add_button_anim"
            android:text="@string/add_prio"
            android:textAllCaps="false"

            android:textSize="35dp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8498756977378374/4114733232" />
</LinearLayout>