<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RankingLayout">

    <TextView
        android:id="@+id/textViewRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="10dp"
        android:text="TextView"
        android:textSize="35dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="Neues Element"
            android:inputType="text"
            android:maxLength="24"
            android:textSize="18dp" />

        <Button
            android:id="@+id/buttonACCEPT3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:hint="Neues Element"
            android:text="Hinzufügen"
            android:textSize="14dp"
            tools:visibility="visible" />
    </LinearLayout>

    <ListView
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

    </ListView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCLEAR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/resren_buttons_anim"
                    android:text="@string/reset"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonRENAME2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/resren_buttons_anim"
                    android:text="@string/rename"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDELETE2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/muelleimer"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCOMPARE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="5"
                android:background="@drawable/compare_button_anim"
                android:text="@string/compare"
                android:textAllCaps="false"
                android:textSize="35dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCLEARALL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/clear_button_anim"
                android:text="@string/clear_ranking"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8498756977378374/4114733232" />
</LinearLayout>